# mergeory

./: report.md
syndiff/: Cargo.toml
syndiff/codegen/: Cargo.toml
syndiff/codegen/src/: auto_impl.rs  convert.rs  extend.rs  family.rs  lib.rs  modgen.rs  syn_family.rs  type_link.rs
syndiff/codegen/tests/: hash_list.rs  hash_tree.rs
syndiff/src/: ast.rs  colors.rs  convert.rs  diff_tree.rs  elided_tree.rs  ellided_tree.rs  generic_tree.rs  hash_tree.rs  lib.rs  main.rs  merge.rs  patch_tree.rs  scoped_tree.rs  source_repr.rs  spine_tree.rs  split.rs  syn_tree.rs  token_trees.rs  tree_formatter.rs  weighted_tree.rs
syndiff/src/diff/: alignment.rs  elision.rs  hash.rs  mod.rs  tree.rs  weight.rs
syndiff/src/family_traits/: mod.rs  visit.rs  visit_mut.rs
syndiff/src/merge/: align_spine.rs  colors.rs  conflict_counter.rs  id_merger.rs  merge_del.rs  merge_ins.rs  metavar_remover.rs  metavar_renamer.rs  mod.rs  patch.rs  subst.rs  tree.rs
syndiff/src/multi_diff_tree/: align_spine.rs  color_merger.rs  conflict_counter.rs  id_merger.rs  merge_del.rs  merge_ins.rs  metavar_remover.rs  metavar_renamer.rs  mod.rs  patch.rs  subst.rs  with_color.rs
syndiff/tests/: check_diff.rs  check_merge.rs
syndiff/tests/prgms/: change_and_move.diff0.rs  change_and_move.edit0.rs  change_and_move.orig.rs  change_sig.diff.rs  change_sig.edit.rs  change_sig.orig.rs  common_trailing.diff.rs  common_trailing.diff0.rs  common_trailing.diff1.rs  common_trailing.edit.rs  common_trailing.mdiff.rs  cross_change.diff0.rs  cross_change.diff1.rs  cross_change.edit0.rs  cross_change.edit1.rs  cross_change.mdiff.rs  cross_change.orig.rs  cross_del.diff0.rs  cross_del.diff1.rs  cross_del.edit0.rs  cross_del.mdiff.rs  cross_del_and_ins.diff0.rs  cross_del_and_ins.diff1.rs  cross_del_and_ins.edit1.rs  factorize.edit.rs  (+27 more)
(+127 files in other folders)
