[package]
name = "syndiff"
version = "0.1.0"
authors = ["Guillaume Bertholon <guillaume.bertholon@ens.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
mrsop-codegen = { path = "codegen" }

[workspace]
