[package]
name = "syndiff"
version = "0.2.0"
authors = ["Guillaume Bertholon <guillaume.bertholon@ens.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.0"
tree-sitter-loader = "0.19.0"
tree-sitter-config = "0.19.0"

[dev-dependencies]
goldenfile = "1.1"

