[package]
name = "syndiff"
version = "0.2.0"
authors = ["Guillaume Bertholon <guillaume.bertholon@ens.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20"
tree-sitter-loader = "0.19"
tree-sitter-config = "0.19"
clap = "2.33"
ansi_term = "0.12"

[dev-dependencies]
goldenfile = "1.1"

